fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   width: 100%;
   font-family: Nunito, sans-serif;
   color: white;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 /* navbar */
 header {
